[tool.poetry]
name = "shelftracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.26.0"
fastapi = "0.111.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
